Come funziona Update

--- a/AreaPubblica/Views/ComeFunziona/Index.cshtml
+++ b/AreaPubblica/Views/ComeFunziona/Index.cshtml
@@ -1,95 +1,124 @@
 ﻿<div style="height:15vh;"></div>
 <div class="row">
-    <div class="col-2"></div>
-    <div class="col-10">
-        <h1 style="font-size:60px;"> Come Funziona?</h1>
+	<div class="col-2"></div>
+	<div class="col-10">
+		<h1 style="font-size:60px;"> Come Funziona?</h1>
 
-        <p>
-            Studiare con la nostra università online è semplice e flessibile. 
-            Una volta iscritto, accedi a una piattaforma digitale dove trovi video lezioni, materiali didattici e supporto costante da parte di tutor qualificati. 
-            Puoi organizzare lo studio secondo i tuoi ritmi e sostenere gli esami secondo le modalità previste dal tuo corso. 
-            Tutto è pensato per offrirti un’esperienza formativa completa, accessibile e sempre al passo con le tue esigenze.
-        </p>
+		<p>
+			Studiare con la nostra università online è semplice e flessibile.
+			Una volta iscritto, accedi a una piattaforma digitale dove trovi video lezioni, materiali didattici e supporto costante da parte di tutor qualificati.
+			Puoi organizzare lo studio secondo i tuoi ritmi e sostenere gli esami secondo le modalità previste dal tuo corso.
+			Tutto è pensato per offrirti un’esperienza formativa completa, accessibile e sempre al passo con le tue esigenze.
+		</p>
+
+		@* punto 1*@
+
+		<p>
+			<h3><strong>1. Come funzionano le lauree e le magistrali</strong></h3><br>
+			L’organizzazione degli studi universitari si articola in tre cicli:
+			<ul>
+				<li><b>Corsi di Studio di primo ciclo e ciclo unico</b>: Laurea, Laurea Magistrale a ciclo unico.</li>
+				<li><b>Corsi di studio di secondo ciclo</b>: Laurea Magistrale.</li>
+				<li><b>Corsi di Studio di terzo ciclo</b>: Dottorati di Ricerca e Scuole di Specializzazione.</li>
+			</ul>
+
+			Per iscriversi alle Lauree e Lauree Magistrali a ciclo unico è richiesto uno dei seguenti titoli:<br />
+
+			<ul>
+
+				<li>diploma di maturità quinquennale;</li>
+				<li>
+					diploma di maturità quadriennale con anno integrativo. 
+					Nel caso in cui il diploma sia rilasciato da istituti che non prevedevano l’anno integrativo, contatta la Segreteria studenti;</li>
+				<li>titolo estero valido.</li>
+			</ul>
+
+			Consulta l’offerta dei corsi dell’UniGen di Generation. <br />
 
 
-        @* punto 1 *@
+			Per le Lauree Magistrali è richiesto uno dei seguenti titoli:
 
-        <p>
-            <h3><strong>1. Iscrizione nell'area pubblica</strong></h3><br>
+			<ul>
+
+				<li>laurea</li>;
+				<li>diploma universitario;</li>
+				<li>titolo rilasciato da: Accademie di Belle Arti, Accademia Nazionale di Danza, 
+					Accademia Nazionale di Arte Drammatica, Istituti Superiori per le Industrie Artistiche, Conservatori di musica, 
+					Istituti musicali pareggiati (secondo l’ordinamento previgente all’entrata in vigore della L. 21/12/99 n.508), accompagnato dal diploma di maturità;</li>	
+				<li>titolo estero valido.</li>
+			</ul>
+
+			Modalità di accesso
+			I corsi (Lauree, Lauree Magistrali a ciclo unico, Lauree Magistrali) possono essere a numero programmato (a livello locale o nazionale) oppure ad accesso libero
+			L’iscrizione avviene in due fasi successive:
+
+			la verifica dei requisiti d’accesso
+			l’immatricolazione
+		</p>
+
+		@* punto 2 *@
+
+		<p>
+			<h3><strong>2. Scelta piano di studi personale</strong></h3><br>
+			Scelgi il tuo piano di studi
+		</p>
+
+		@* punto 3 *@
+
+		<p>
+			<h3><strong>3. Iscrizione nell'area pubblica</strong></h3><br>
 			<h5>Come registrarsi?</h5>
-			Per iscriversi all’UniGen è necessario compilare un modulo di registrazione online.
-			Durante la registrazione, ti verrà chiesto di fornire alcune informazioni personali, come nome, cognome, indirizzo email e numero di telefono.
-			Queste informazioni sono necessarie per creare il tuo profilo studente e per comunicare con te durante il tuo percorso accademico.</br>
-            È possibile effettuare la registrazione al sito UniGen direttamente da questo <a href="#">link</a>. </br>
-            La registrazione non implica alcun impegno vincolante per l'immatricolazione.
+			Per iscriversi all’UniGen è <strong>necessario compilare</strong> un modulo di registrazione online.
+			Durante la registrazione, ti verrà chiesto di fornire alcune informazioni personali, come <strong></strong> nome, <strong></strong>cognome, <strong></strong>indirizzo email e <strong></strong>numero di telefono.
+			Queste informazioni sono <strong>necessarie</strong>  per creare il <strong>tuo profilo studente</strong> e per <strong>comunicare con te</strong> durante il tuo percorso accademico.<br>
+			È possibile effettuare la registrazione al sito UniGen direttamente da questo <a href="#">link</a>.<br>
+			La registrazione <strong>non implica</strong> alcun impegno <strong>vincolante per l'immatricolazione</strong>.
 
-        </p>
+		</p>
 
-        @* punto 2 *@
+		@* punto 4 *@
 
-        <p>
-            <h3><strong>2. Immatricolazione</strong></h3><br>
-            <h5>Come immatricolarsi?</h5>
-            È possibile immatricolarsi ai corsi di Laurea
-            dell’UniGen direttamente dal
-            pc di casa utilizzando la procedura online disponibile
-            sul sito di Ateneo.
-            ??Dopo essersi registrati, occorre accedere alla propria Area Lavoro per effettuare l'immatricolazione??
-        </p>
-     @*         <ul>
-            <li>Dati identificativi (nome, email, telefono)</li>
-            <li>Dati tecnici (IP, browser, dispositivo)</li>
-            <li>Dati forniti volontariamente tramite form di contatto o acquisto</li>
-                </ul> *@
-
-
-        @* punto 3 *@
-
-        <p>
-            <h3><strong>3. Scelta piano studi personale</strong></h3><br>
-            I dati sono trattati per:
-        </p>
-        <ul>
-            <li>Rispondere a richieste e fornire servizi</li>
-            <li>Adempiere a obblighi legali</li>
-            <li>Finalità di marketing (previo consenso)</li>
-        </ul>
-
-        @* punto 4 *@
-
-        <p>
-            <h3><strong>4. Come funzionano le lauree e le magistrali</strong></h3><br>
-            I dati saranno conservati per il tempo strettamente necessario a conseguire gli scopi per cui sono stati raccolti.
-        </p>
+		<p>
+			<h3><strong>4. Immatricolazione</strong></h3><br>
+			<h5>Come immatricolarsi?</h5>
+			È possibile <strong>immatricolarsi</strong> ai corsi di Laurea dell’UniGen direttamente dal
+			pc di casa utilizzando la procedura online disponibile sul sito dell'Ateneo. <br>
+			Dopo essersi registrati, occorre accedere al proprio profilo per effettuare l'immatricolazione.
+			Una volta caricarti i file richiesti e pagata la rata di iscrizione,si verrà contattati dalla segreteria per la conferma dell'iscrizione al corso di laurea scelto.
+			In caso di esito positivo, dalla propria area profilo, sarà possibile accedere all'area lavoro per seguire le lezione e per la prenotazione degli esami.
+		</p>
 
 
 
-        @* punto 5 *@
-        <p>
-            <h3><strong>5.Come funzionano le videolezioni</strong></h3><br>
-            Le lezioni saranno disponibili in modalità teledidattica e verranno registrate e caricate dai docenti per la fruizione in differita. <br /> 
-            ??Sarà possibile filtrare le lezioni del proprio corso per docente e per esame??
-        </p>
 
 
-        @* punto 6 *@
-        <p>
-            <h3><strong>6. Come funzionano gli esami</strong></h3><br>
-            Sarà possibile iscriversi agli esami dalla propria area personale. 
-            Gli esami potranno essere orali, scritti a domande aperte o a domande chiuse, a discrezione del docente e dell'esame in questione. 
-            Verranno forniti link rispettivamente a una videochiamata o al test scritto da effettuare.
-        </p>
 
-        @* punto 7 *@
-
-        <p>
-            <h3><strong>Come fuzniona la scelta dei corsi?</strong></h3><br>
+		@* punto 5 *@
+		<p>
+			<h3><strong>5.Come funzionano le videolezioni</strong></h3><br>
+			Le lezioni saranno disponibili in modalità teledidattica e verranno registrate e caricate dai docenti per la fruizione in differita. <br />
+			Sarà possibile filtrare le lezioni del proprio corso per docente e per esame
+		</p>
 
 
-        </p>
-        <p></p>
-        <p></p>
-        <p></p>
+		@* punto 6 *@
+		<p>
+			<h3><strong>6. Come funzionano gli esami</strong></h3><br>
+			Sarà possibile iscriversi agli esami dalla propria area personale.
+			Gli esami potranno essere orali, scritti a domande aperte o a domande chiuse, a discrezione del docente e dell'esame in questione.
+			Verranno forniti link rispettivamente a una videochiamata o al test scritto da effettuare.
+		</p>
 
-    </div>
+		@* punto 7 *@
+
+		<p>
+			<h3><strong>Come fuzniona la scelta dei corsi?</strong></h3><br>
+
+
+		</p>
+		<p></p>
+		<p></p>
+		<p></p>
+
+	</div>
 </div>
