Come Funziona update 2

--- a/AreaPubblica/Views/ComeFunziona/Index.cshtml
+++ b/AreaPubblica/Views/ComeFunziona/Index.cshtml
@@ -5,67 +5,77 @@
 		<h1 style="font-size:60px;"> Come Funziona?</h1>
 
 		<p>
-			Studiare con la nostra università online è semplice e flessibile.
-			Una volta iscritto, accedi a una piattaforma digitale dove trovi video lezioni, materiali didattici e supporto costante da parte di tutor qualificati.
+			Studiare con la nostra università online è semplice e flessibile. <br>
+			Una volta iscritto, accedi a una piattaforma digitale dove trovi video lezioni, materiali didattici e supporto costante da parte di tutor qualificati. <br />
 			Puoi organizzare lo studio secondo i tuoi ritmi e sostenere gli esami secondo le modalità previste dal tuo corso.
 			Tutto è pensato per offrirti un’esperienza formativa completa, accessibile e sempre al passo con le tue esigenze.
 		</p>
 
 		@* punto 1*@
 
-		<p>
+		<div class="mb-5">
 			<h3><strong>1. Come funzionano le lauree e le magistrali</strong></h3><br>
-			L’organizzazione degli studi universitari si articola in tre cicli:
+			<p class="fw-bold">L’organizzazione degli studi universitari si articola in tre cicli:</p>
 			<ul>
-				<li><b>Corsi di Studio di primo ciclo e ciclo unico</b>: Laurea, Laurea Magistrale a ciclo unico.</li>
-				<li><b>Corsi di studio di secondo ciclo</b>: Laurea Magistrale.</li>
-				<li><b>Corsi di Studio di terzo ciclo</b>: Dottorati di Ricerca e Scuole di Specializzazione.</li>
+				<li class="">Corsi di Studio di primo ciclo e ciclo unico: Laurea, Laurea Magistrale a ciclo unico.</li>
+				<li>Corsi di studio di secondo ciclo: Laurea Magistrale.
+				<li>Corsi di Studio di terzo ciclo: Dottorati di Ricerca e Scuole di Specializzazione.</li>
 			</ul>
 
-			Per iscriversi alle Lauree e Lauree Magistrali a ciclo unico è richiesto uno dei seguenti titoli:<br />
+			<p class="fw-bold">Per iscriversi alle Lauree e Lauree Magistrali a ciclo unico è richiesto uno dei seguenti titoli:</p>
 
 			<ul>
 
 				<li>diploma di maturità quinquennale;</li>
 				<li>
-					diploma di maturità quadriennale con anno integrativo. 
-					Nel caso in cui il diploma sia rilasciato da istituti che non prevedevano l’anno integrativo, contatta la Segreteria studenti;</li>
+					diploma di maturità quadriennale con anno integrativo.
+					Nel caso in cui il diploma sia rilasciato da istituti che non prevedevano l’anno integrativo, contatta la Segreteria studenti;
+				</li>
 				<li>titolo estero valido.</li>
 			</ul>
 
-			Consulta l’offerta dei corsi dell’UniGen di Generation. <br />
+			
 
 
-			Per le Lauree Magistrali è richiesto uno dei seguenti titoli:
+			<p class="fw-bold">Per le Lauree Magistrali è richiesto uno dei seguenti titoli:</p>
 
 			<ul>
 
-				<li>laurea</li>;
-				<li>diploma universitario;</li>
-				<li>titolo rilasciato da: Accademie di Belle Arti, Accademia Nazionale di Danza, 
-					Accademia Nazionale di Arte Drammatica, Istituti Superiori per le Industrie Artistiche, Conservatori di musica, 
-					Istituti musicali pareggiati (secondo l’ordinamento previgente all’entrata in vigore della L. 21/12/99 n.508), accompagnato dal diploma di maturità;</li>	
-				<li>titolo estero valido.</li>
+				<li>Laurea;</li>
+				<li>Diploma universitario;</li>
+				<li>
+					Titolo rilasciato da: Accademie di Belle Arti, Accademia Nazionale di Danza,<br />
+					Accademia Nazionale di Arte Drammatica, Istituti Superiori per le Industrie Artistiche, Conservatori di musica, <br />
+					Istituti musicali pareggiati (secondo l’ordinamento previgente all’entrata in vigore della L. 21/12/99 n.508), accompagnato dal diploma di maturità;
+				</li>
+				<li>Titolo estero valido.</li>
 			</ul>
 
-			Modalità di accesso
-			I corsi (Lauree, Lauree Magistrali a ciclo unico, Lauree Magistrali) possono essere a numero programmato (a livello locale o nazionale) oppure ad accesso libero
-			L’iscrizione avviene in due fasi successive:
-
-			la verifica dei requisiti d’accesso
-			l’immatricolazione
-		</p>
+			Modalità di accesso:<br />
+			I corsi (Lauree, Lauree Magistrali a ciclo unico, Lauree Magistrali) possono essere a numero programmato (a livello locale o nazionale) oppure ad accesso libero <br />
+			
+			
+			<p class="fw-bold">L’iscrizione avviene in due fasi successive</p>:
+			<ul>
+				<li>la registrazione</li>
+				<li>l’immatricolazione</li>
+			</ul>
+		</div>
 
 		@* punto 2 *@
 
-		<p>
+		<div class="mb-5">
 			<h3><strong>2. Scelta piano di studi personale</strong></h3><br>
-			Scelgi il tuo piano di studi
-		</p>
+			La UniGen di Generation propone una <strong>vasta gamma di corsi</strong> che ti permettono di costruire <strong>un piano di studi su misura</strong>,
+			in base ai tuoi interessi,obiettivi professionali e percorso accademico. Che tu scelga una <strong>laurea triennale</strong>, <strong>magistrale</strong> o <strong>a ciclo unico</strong>,
+			hai la possibilità di <strong>personalizzare</strong> il tuo percorso selezionando gli <strong>insegnamenti opzionali</strong> più affini alle tue aspirazioni.
+			In questo modo, ogni studente può costruire una <strong>formazione realmente centrata </strong>sulle proprie ambizioni future.
+
+		</div>
 
 		@* punto 3 *@
 
-		<p>
+		<div class="mb-5">
 			<h3><strong>3. Iscrizione nell'area pubblica</strong></h3><br>
 			<h5>Come registrarsi?</h5>
 			Per iscriversi all’UniGen è <strong>necessario compilare</strong> un modulo di registrazione online.
@@ -74,19 +84,19 @@
 			È possibile effettuare la registrazione al sito UniGen direttamente da questo <a href="#">link</a>.<br>
 			La registrazione <strong>non implica</strong> alcun impegno <strong>vincolante per l'immatricolazione</strong>.
 
-		</p>
+		</div>
 
 		@* punto 4 *@
 
-		<p>
+		<div class="mb-5">
 			<h3><strong>4. Immatricolazione</strong></h3><br>
 			<h5>Come immatricolarsi?</h5>
 			È possibile <strong>immatricolarsi</strong> ai corsi di Laurea dell’UniGen direttamente dal
 			pc di casa utilizzando la procedura online disponibile sul sito dell'Ateneo. <br>
-			Dopo essersi registrati, occorre accedere al proprio profilo per effettuare l'immatricolazione.
+			Dopo essersi <strong>registrati</strong>, occorre <strong>accedere al proprio</strong> profilo per effettuare l'immatricolazione.
 			Una volta caricarti i file richiesti e pagata la rata di iscrizione,si verrà contattati dalla segreteria per la conferma dell'iscrizione al corso di laurea scelto.
 			In caso di esito positivo, dalla propria area profilo, sarà possibile accedere all'area lavoro per seguire le lezione e per la prenotazione degli esami.
-		</p>
+		</div>
 
 
 
@@ -94,31 +104,31 @@
 
 
 		@* punto 5 *@
-		<p>
+		<div class="mb-5">
 			<h3><strong>5.Come funzionano le videolezioni</strong></h3><br>
-			Le lezioni saranno disponibili in modalità teledidattica e verranno registrate e caricate dai docenti per la fruizione in differita. <br />
+			Le lezioni saranno disponibili in <strong>modalità teledidattica </strong>e verranno <strong>registrate e caricate dai docenti</strong> per la fruizione in differita. <br />
 			Sarà possibile filtrare le lezioni del proprio corso per docente e per esame
-		</p>
+		</div>
 
 
 		@* punto 6 *@
-		<p>
+		<div class="mb-5">
 			<h3><strong>6. Come funzionano gli esami</strong></h3><br>
-			Sarà possibile iscriversi agli esami dalla propria area personale.
-			Gli esami potranno essere orali, scritti a domande aperte o a domande chiuse, a discrezione del docente e dell'esame in questione.
-			Verranno forniti link rispettivamente a una videochiamata o al test scritto da effettuare.
-		</p>
+			Sarà possibile iscriversi agli esami <strong>dalla propria area lavoro</strong>. <br />
+			Gli esami potranno essere <strong>orali</strong>, <strong>scritti</strong> a <strong>domande aperte </strong>o a <strong>domande chiuse</strong>, a discrezione del docente e dell'esame in questione.
+			Verranno forniti <strong>link</strong> rispettivamente a una videochiamata o al test scritto da effettuare.
+		</div>
 
 		@* punto 7 *@
 
-		<p>
+		<div class="mb-5">
 			<h3><strong>Come fuzniona la scelta dei corsi?</strong></h3><br>
+			La UniGen di Generation propone una <strong>vasta gamma di corsi</strong> che ti permettono di costruire un piano di studi su misura, in base ai tuoi
+			<strong>interessi</strong>, <strong>obiettivi professionali</strong> e <strong>percorso accademico</strong>. Che tu scelga una <strong>laurea triennale</strong>,
+			<strong>magistrale</strong> o <strong>a ciclo unico</strong>, hai la possibilità di <strong>personalizzare il tuo percorso</strong> selezionando gli
+			<strong>insegnamenti opzionali</strong> più affini alle tue aspirazioni. In questo modo, ogni studente può <strong>valorizzare le proprie inclinazioni</strong>
+			e costruire una <strong>formazione realmente centrata sulle proprie ambizioni future</strong>.
 
-
-		</p>
-		<p></p>
-		<p></p>
-		<p></p>
-
+		</div>
 	</div>
 </div>
