--- a/AreaDocente/Views/Lezioni/List.cshtml
+++ b/AreaDocente/Views/Lezioni/List.cshtml
@@ -6,47 +6,39 @@
     <table class="table">
         <thead>
             <tr>
-                @* <th class="th">K</th> *@
                 <th>Esame</th>
                 <th>Titolo lezione</th>
                 <th>Video</th>
+                <th>Azioni</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var lezioni in Model)
             {
                 <tr>
-                    @* <td class="th">@lezioni.K_Lezione</td> *@
-                    <td>@Html.DisplayFor(Model => lezioni.Esame.TitoloEsame)</td>
+                    <td>@lezioni.Esame?.TitoloEsame</td>
                     <td>@lezioni.Titolo</td>
-                    <td><a target="_blank" href="@lezioni.Video">Link</a></td>
                     <td>
-                        <a class="btn btn-primary" asp-controller="Lezioni" asp-action="Edit" asp-route-id="@lezioni.K_Lezione">Modifica</a>
+                        <a target="_blank" href="@lezioni.Video" class="btn btn-outline-info btn-sm">
+                            <i class="bi bi-play-circle-fill me-1"></i> Guarda
+                        </a>
+                    </td>
+                    <td>
+                        <a class="btn btn-warning btn-sm" asp-controller="Lezioni" asp-action="Edit" asp-route-id="@lezioni.K_Lezione">
+                            <i class="bi bi-pencil-square me-1"></i> Modifica
+                        </a>
                     </td>
                 </tr>
             }
         </tbody>
         <tfoot>
             <tr>
-                <td>
-                    <a class="btn btn-primary" asp-controller="Lezioni" asp-action="Add">Inserire una nuova lezione</a>
+                <td colspan="4">
+                    <a class="btn btn-success" asp-controller="Lezioni" asp-action="Add">
+                        <i class="bi bi-plus-circle me-1"></i> Inserisci nuova lezione
+                    </a>
                 </td>
             </tr>
         </tfoot>
     </table>
-
-    @* @section Scripts {
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-        @if (TempData["AlertMessage"] != null)
-        {
-            <script>
-                Swal.fire({
-                    icon: 'success',
-                    title: 'Operazione riuscita',
-                    text: '@TempData["AlertMessage"]'
-                });
-            </script>
-        }
-    } *@
 </div>
