--- a/AreaDocente/Views/Materiali/List.cshtml
+++ b/AreaDocente/Views/Materiali/List.cshtml
@@ -12,6 +12,17 @@
             _ => "bi-file-earmark-fill"
         };
     }
+
+    bool IsViewableInBrowser(string contentType)
+    {
+        return contentType switch
+        {
+            "application/pdf" => true,
+            "image/jpeg" => true,
+            "image/png" => true,
+            _ => false
+        };
+    }
 }
 
 <div class="container my-5">
@@ -20,11 +31,10 @@
     <table class="table">
         <thead>
             <tr>
-                @*  <th>Id</th> *@
                 <th>Titolo</th>
                 <th>Materiale</th>
-                @* <th>Tipo</th> *@
                 <th>Esame</th>
+                <th>Azioni</th>
             </tr>
         </thead>
         <tbody>
@@ -35,13 +45,27 @@
                 <tr>
                     <td>@mat.Titolo</td>
                     <td>
-                        <a asp-action="View" target="_blank" asp-route-id="@mat.K_Materiale" class="btn btn-outline-primary btn-sm me-1">
-                            <i class="bi @iconClass me-1"></i> Visualizza
-                        </a>
-                        <a asp-action="Download" asp-route-id="@mat.K_Materiale" class="btn btn-outline-secondary btn-sm">
-                            <i class="bi bi-download me-1"></i> Scarica
-                        </a>
+                        <div class="d-flex justify-content-start gap-2" style="min-width: 180px;">
+                            @if (IsViewableInBrowser(mat.Tipo))
+                            {
+                                <a asp-action="View" target="_blank" asp-route-id="@mat.K_Materiale" class="btn btn-outline-primary btn-sm" style="min-width: 99.25px">
+                                    <i class="bi @iconClass me-1"></i> Visualizza
+                                </a>
+                            }
+                            else
+                            {
+                                <span style="width: 99.25px;"></span> @* Segnaposto per allineamento Visualizza *@
+                            }
+
+                            <a asp-action="Download" asp-route-id="@mat.K_Materiale" class="btn btn-outline-secondary btn-sm">
+                                <i class="bi bi-download me-1"></i> Scarica
+                            </a>
+                        </div>
                     </td>
+
+
+
+
                     <td>@mat.esame?.TitoloEsame</td>
                     <td>
                         <a class="btn btn-warning btn-sm" asp-controller="Materiali" asp-action="Edit" asp-route-id="@mat.K_Materiale">
@@ -53,8 +77,10 @@
         </tbody>
         <tfoot>
             <tr>
-                <td>
-                    <a class="btn btn-primary" asp-controller="Materiali" asp-action="Add"><i class="bi bi-plus-circle me-1"></i> Inserire un nuovo materiale</a>
+                <td colspan="4">
+                    <a class="btn btn-success" asp-controller="Materiali" asp-action="Add">
+                        <i class="bi bi-plus-circle me-1"></i> Inserisci nuovo materiale
+                    </a>
                 </td>
             </tr>
         </tfoot>
