--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -1,18 +1,15 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="MasterPage" %>
 
 <!DOCTYPE html>
-
 <html>
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title></title>
 
     <style>
-        /*Colore*/
         .navbar-custom {
             background-color: #12304F;
         }
@@ -27,21 +24,19 @@
         }
 
         .navbar-nav.navbar-right {
-            margin-left: auto; /* Spinge a destra gli elementi della navbar */
+            margin-left: auto;
         }
 
-        /* Margini tra i bottoni */
         .navbar-nav .nav-item {
-            margin-left: 15px; /* Aggiungi margine tra i vari bottoni */
+            margin-left: 15px;
         }
 
             .navbar-nav .nav-item .btn-light {
-                margin-top: 5px; /* Spazio tra i bottoni */
+                margin-top: 5px;
             }
 
-                /* Aggiungi un margine tra l'icona e il nome dello studente */
                 .navbar-nav .nav-item .btn-light i {
-                    margin-right: 10px; /* Aggiungi uno spazio tra l'icona e il testo */
+                    margin-right: 10px;
                 }
 
         .flex-wrapper {
@@ -51,17 +46,33 @@
         }
 
         footer {
-            margin-top: auto;
+            position: fixed; /* Rende il footer fisso al fondo */
+            bottom: 0; /* Posiziona il footer in fondo alla pagina */
+            left: 0;
+            width: 100%;
+            background-color: #212529;
+            color: white;
+            padding: 5px 0; /* Ridurre l'altezza del footer */
+            font-size: 0.6rem; /* Font più piccolo */
+            text-align: center; /* Centra il testo */
         }
+
+            footer p, footer a {
+                margin-bottom: 0.2rem; /* Ridurre ulteriormente il margine tra gli elementi */
+            }
+
+            footer .container {
+                padding-top: 5px;
+                padding-bottom: 5px;
+            }
+
     </style>
 
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <asp:ContentPlaceHolder ID="head" runat="server" />
 </head>
 
-<body class="m-0 flex-wrapper">
-
-    <%--MODAL--%>
+<body class="m-0">
+    <%-- Modal per errore autenticazione --%>
     <div class="modal fade" id="authErrorModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -77,35 +88,29 @@
             </div>
         </div>
     </div>
-    <form id="form1" runat="server">
 
+    <form id="form1" runat="server" class="flex-wrapper">
+        <!-- Header -->
         <header>
-
             <div class="sticky-top">
                 <nav class="navbar navbar-expand-lg navbar-custom">
                     <div class="container">
-                        <!-- Logo -->
                         <a class="navbar-brand me-3" href="#">
                             <img src="resources/logonobg.png" height="50px" alt="Logo">
                         </a>
-
-                        <!-- Pulsante per il menu mobile -->
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
-                        <!-- Voci di navigazione -->
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mb-2 mb-lg-0">
                                 <li class="nav-item">
                                     <a class="nav-link active" href="Homepage.aspx">Home</a>
                                 </li>
-
                                 <li id="liMateriali" runat="server" class="nav-item">
                                     <a class="nav-link" href="Lezioni_Materiali.aspx">Lezioni</a>
                                 </li>
-
                                 <li id="liAppelli" runat="server" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Appelli</a>
                                     <ul class="dropdown-menu">
@@ -123,8 +128,6 @@
                                         <li><a class="dropdown-item" href="RinunciaStudi.aspx">Rinuncia agli studi</a></li>
                                     </ul>
                                 </li>
-
-
                                 <li id="li2" runat="server" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Pagamenti</a>
                                     <ul class="dropdown-menu">
@@ -132,8 +135,6 @@
                                         <li><a class="dropdown-item" href="PagamentiEffettuati.aspx">Pagamenti Effettuati</a></li>
                                     </ul>
                                 </li>
-
-
                                 <li id="liComunicazioni" runat="server" class="nav-item">
                                     <a class="nav-link" href="#">Comunicazioni</a>
                                 </li>
@@ -145,33 +146,32 @@
                             <ul class="navbar-nav navbar-right">
                                 <li class="nav-item">
                                     <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i>
-                                        <asp:Label ID="lblStudente" runat="server"></asp:Label></a>
+                                        <asp:Label ID="lblStudente" runat="server"></asp:Label>
+                                    </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="btn btn-light btn-sm" href="#">Logout</a>
                                 </li>
                             </ul>
-
                         </div>
                     </div>
                 </nav>
             </div>
         </header>
 
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        </asp:ContentPlaceHolder>
+        <!-- Contenuto dinamico -->
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server" />
 
+        <!-- Footer -->
         <footer>
-
             <div class="bg-dark text-white">
+                <%--<div class="container d-flex justify-content-between align-items-end flex-wrap py-3">--%>
+                <div class="container d-flex justify-content-between align-items-start flex-wrap py-2">
 
-
-                <div class="container d-flex justify-content-between align-items-end flex-wrap">
                     <div>
                         <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
                         <p class="fs-4">Università UNIGen</p>
                         <p class="fs-6">Milano, MI 20100, IT</p>
-
                     </div>
                     <div>
                         <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
@@ -189,17 +189,16 @@
             </div>
         </footer>
     </form>
-</body>
-<script>
-    function showAuthErrorModal() {
-        const modal = new bootstrap.Modal(document.getElementById('authErrorModal'));
-        modal.show();
 
-        // Timeout per il reindirizzamento automatico dopo 8 secondi
-        setTimeout(function () {
-            window.location.href = 'Login.aspx';
-        }, 8000);
-    }
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script>
+        function showAuthErrorModal() {
+            const modal = new bootstrap.Modal(document.getElementById('authErrorModal'));
+            modal.show();
+            setTimeout(function () {
+                window.location.href = 'Login.aspx';
+            }, 8000);
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+</body>
 </html>
