--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown">
-                                        <a class="dropdown-item" style="color:inherit"; href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]&mat=@ViewData["matricola"]">
+                                        <a class="dropdown-item" style="color:inherit"; href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
                                             Modifica Dati
                                         </a>
                                     </li>
@@ -112,7 +112,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Contatta l'Amministrazione</a>
+                                <a class="nav-link active" aria-current="page" href="/Comunicazioni/Add">Nuova Comunicazione</a>
 
                             </li>
 
