--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -32,7 +32,6 @@
     </style>
 
 </head>
-
 <body class="m-0 flex-wrapper">
     <header class="mb-5">
         <div class="fixed-top">
@@ -47,21 +46,19 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-
-                            <li>
-                                <a class="navbar-brand" href="#">
-                                    <img src="~/css/resources/logonobg.png" alt="Bootstrap" width="150">
-                                </a>
-                            </li>
-
-
-
                             <li class="nav-item">
                                 <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Attività
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Materiali" asp-action="List">Materiali</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Lezioni" asp-action="List">Lezioni</a></li>
+                                </ul>
+                            </li>
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -76,44 +73,22 @@
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
                                     Account
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Modifica account</a></li>
-                                    <li><a class="dropdown-item" href="#">Logout</a></li>
-
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Docenti" asp-action="ModificaProfilo">Modifica Dati</a></li>
                                 </ul>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Gestione ...
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">materiali</a></li>
-                                    <li><a class="dropdown-item" href="#">lezioni</a></li>
-                                    <li><a class="dropdown-item" href="#">appelli</a></li>
-                                    <li><a class="dropdown-item" href="#">test</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Valutazione degli esami</a>
-
                             </li>
 
                         </ul>
                         <ul class="navbar-nav navbar-right">
                             <li class="nav-item">
-
                                 @* <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> @ViewBag.usr </a> *@
                                 <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> @Context.Session.GetString("usr") </a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-light btn-sm" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                             </li>
-
 
                         </ul>
                     </div>
@@ -122,10 +97,8 @@
         </div>
     </header>
 
-    <div class="container">
-        <main role="main" class="pb-3 mt-5">
-            <div class="mt-5">&nbsp;</div>
-
+    <div @* class="container" *@>
+        <main role="main" @* class="pb-3 mt-5" *@>
             @RenderBody()
         </main>
     </div>
