--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Test</h5>
                         <p class="card-text">Sezione dedicata alla gestione dei test.</p>
-                        <a asp-area="" asp-controller="Tests" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
+                        <a asp-area="" asp-controller="Prove" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
                     </div>
                 </div>
             </div>
