--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -8,6 +8,15 @@
 				<div class="card shadow">
 					<div class="card-body">
 						<h3 class="text-center mb-2">Procedura di Immatricolazione</h3>
+						@if (!ViewData.ModelState.IsValid)
+						{
+							<div class="alert alert-danger text-center" role="alert">
+								@foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+								{
+									<div>@error.ErrorMessage</div>
+								}
+							</div>
+						}
 						<p class="text-black px-1">
 							In quest’area personale puoi scegliere la facoltà di tuo interesse, selezionare il corso di laurea e completare il primo pagamento per l’immatricolazione.
 							Ti ricordiamo che, una volta confermate, le scelte relative alla facoltà e al corso non potranno essere modificate senza una nuova procedura di iscrizione.
@@ -15,11 +24,11 @@
 
 						<h4 class="heading-small text-muted">SELEZIONA UNA FACOLTÀ</h4>
 						<div class="row mb-0 mb-lg-3 align-items-end">
-							<div class="col-12 col-lg-9 mb-2 mb-lg-0">				
+							<div class="col-12 col-lg-9 mb-2 mb-lg-0">
 								<select asp-for="K_Facolta" asp-items="Model.FacoltaList" class="form-select" onchange="this.form.submit()">
-									<option disabled selected >-- Selezionare una Facoltà --</option>
+									<option disabled selected required>-- Selezionare una Facoltà --</option>
 								</select>
-							</div>							
+							</div>
 						</div>
 
 						<hr class="my-4">
@@ -27,11 +36,11 @@
 						<div class="row mb-0 mb-lg-3 align-items-end">
 							<div class="col-12 col-lg-9 mb-2 mb-lg-0">
 								<select asp-for="K_Corso" asp-items="Model.CorsiList" class="form-select">
-									<option disabled selected>-- Selezionare un Corso --</option>
+									<option disabled selected required>-- Selezionare un Corso --</option>
 								</select>
 							</div>
 						</div>
-																							
+
 
 
 						<hr class="my-4">
