--- a/AreaDocente/Views/Prove/Add.cshtml
+++ b/AreaDocente/Views/Prove/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Pagina con Accordion";
 }
-@model AreaDocente.Models.AddMaterialiViewModel
+@model AreaDocente.Models.AddProveViewModel
 <div class="container mt-5">
     <h2>Aggiungi Sezioni</h2>
 
