--- a/AreaDocente/Views/Prove/Add.cshtml
+++ b/AreaDocente/Views/Prove/Add.cshtml
@@ -1,11 +1,18 @@
 ﻿@{
     ViewData["Title"] = "Pagina con Accordion";
 }
+@* @model AreaDocente.Models.AddProveViewModel *@
 
 <div class="container mt-5">
     <h2>Aggiungi Sezioni</h2>
 
     <form method="post" id="accordionForm">
+        <div class="mb-4">
+            <label class="form-label fw-semibold">Esame di appartenenza</label>
+            <select asp-for="K_Esame" asp-items="@ViewBag.EsameList" class="form-select" required>
+                <option disabled selected value="">== Selezionare un esame ==</option>
+            </select>
+        </div>
         <div class="accordion" id="accordionContainer">
             <!-- Sezioni aggiunte dinamicamente qui -->
         </div>
@@ -53,6 +60,4 @@
             indice++;
         }
     </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 }
