modificato spazio per far scendere il footer

--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 								<a class="btn btn-sm text-white" style="background-color: #12304F;" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
 							</div>
 						</div>
-						<p class="fs-4 text-black me-3 text-end">Fatti non foste a viver come bruti</p>
+						<p class="fs-4 text-black me-3 text-end fst-italic">"Fatti non foste a viver come bruti"</p>
 
 					</div>
 				</div>
