--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                         <a class="btn  btn-sm " style="color: #12304F; border-color:#12304F;" aria-current="page" href="https://localhost:7272/Home/Index">Logout</a>
                     </div>
                 </div>
-                <p class="fs-4 text-black me-3 text-end">Fatti non foste a viver come bruti</p>
+                <p class="fs-4 text-black me-3 text-end fst-italic">"Fatti non foste a viver come bruti"</p>
 
             </div>
         </div>
