--- a/Comunicazioni/Views/Shared/_Layout.cshtml
+++ b/Comunicazioni/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 				</div>
 
 				<div>
-					<p class="fs-4 text-white m-0">Fatti non foste a viver come bruti</p>
+					<p class="fs-4 text-white m-0 fst-italic">"Fatti non foste a viver come bruti"</p>
 				</div>
 			</div>
 		</div>
