--- a/AreaPubblica/Views/ComeFunziona/Index.cshtml
+++ b/AreaPubblica/Views/ComeFunziona/Index.cshtml
@@ -81,8 +81,9 @@
 			Per iscriversi all’UniGen è <strong>necessario compilare</strong> un modulo di registrazione online.
 			Durante la registrazione, ti verrà chiesto di fornire alcune informazioni personali, come <strong></strong> nome, <strong></strong>cognome, <strong></strong>indirizzo email e <strong></strong>numero di telefono.
 			Queste informazioni sono <strong>necessarie</strong>  per creare il <strong>tuo profilo studente</strong> e per <strong>comunicare con te</strong> durante il tuo percorso accademico.<br>
-			È possibile effettuare la registrazione al sito UniGen direttamente da questo <a href="#">link</a>.<br>
+			È possibile effettuare la registrazione al sito UniGen direttamente da questo <a class="text-primary" asp-area="" asp-controller="Login" asp-action="Register">link</a>
 			La registrazione <strong>non implica</strong> alcun impegno <strong>vincolante per l'immatricolazione</strong>.
+					
 
 		</div>
 
@@ -122,7 +123,7 @@
 		@* punto 7 *@
 
 		<div class="mb-5">
-			<h3><strong>Come fuzniona la scelta dei corsi?</strong></h3><br>
+			<h3><strong>Come funziona la scelta dei corsi?</strong></h3><br>
 			La UniGen di Generation propone una <strong>vasta gamma di corsi</strong> che ti permettono di costruire un piano di studi su misura, in base ai tuoi
 			<strong>interessi</strong>, <strong>obiettivi professionali</strong> e <strong>percorso accademico</strong>. Che tu scelga una <strong>laurea triennale</strong>,
 			<strong>magistrale</strong> o <strong>a ciclo unico</strong>, hai la possibilità di <strong>personalizzare il tuo percorso</strong> selezionando gli
