--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -182,7 +182,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Le Nuove Aule Studio </h5>
 						<p class="card-text">L'apertura delle nostre nuove aule studio con cui supportiamo i nostri studenti nei loro progetti di studio.</p>
-						<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+						<p class="card-text"><small class="text-body-secondary"></small></p>
 					</div>
 				</div>
 			</div>
