--- a/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
@@ -47,7 +47,7 @@
 											@foreach (var esame in docente)
 											{
 												<li class="list-group-item">
-													<strong>Esame:</strong> @esame.Esame <br />
+													<nobr class="text-primary">Esame:</nobr> @esame.Esame <br />
 													<strong>Corso:</strong> @esame.Corso
 												</li>
 											}
