--- a/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
@@ -8,13 +8,13 @@
 
 <div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
-			<h1 class="mb-4">Corsi di Laurea</h1>
+		<h1 class="mb-4">Corsi di Laurea</h1>
 		<div class="col-md-8">
 			<p>
-				La nostra <strong>università online</strong> propone una vasta gamma di corsi di laurea, pensati per rispondere alle esigenze di formazione nei più diversi ambiti disciplinari.
-				L’offerta comprende percorsi di <strong>Laurea Triennale</strong>, <strong>Magistrale</strong> e a <strong>Ciclo Unico</strong>, così da permettere a ogni studente di scegliere il cammino più adatto ai propri interessi
+				La nostra università online propone una vasta gamma di corsi di laurea, pensati per rispondere alle esigenze di formazione nei più diversi ambiti disciplinari.
+				L’offerta comprende percorsi di laurea triennale, magistrale e a ciclo unico, così da permettere a ogni studente di scegliere il cammino più adatto ai propri interessi
 				e obiettivi professionali. Ogni corso è progettato per offrire una preparazione solida, aggiornata e in linea con le richieste del mondo del lavoro,
-				mantenendo al tempo stesso la flessibilità tipica della <strong>didattica online</strong>. Qualunque sia il tuo percorso, troverai un ambiente <strong>dinamico</strong>, <strong>accessibile</strong> e orientato al supporto costante
+				mantenendo al tempo stesso la flessibilità tipica della didattica online. Qualunque sia il tuo percorso, troverai un ambiente dinamico, accessibile e orientato al supporto costante
 				dello studente.
 			</p>
 
@@ -51,7 +51,7 @@
 											@foreach (var corso in facolta)
 											{
 												<li class="list-group-item">
-													<strong>Corso:</strong> @corso.TitoloCorso <br />
+													<nobr class="text-primary">Corso:</nobr> @corso.TitoloCorso <br />
 													<strong>Durata:</strong> @corso.Durata
 												</li>
 											}
@@ -66,7 +66,6 @@
 		</div>
 
 		<div class="col-md-4 d-flex align-items-start">
-			<img src="~/sources/corsi.png" class="img-fluid rounded shadow" alt="Immagine Corsi" />
 		</div>
 	</div>
 </div>
